c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/compound_inititializer_too_long.c
int main(void) {
    int arr[3] = {1, 2, 3, 4};
    return arr[2];
}